--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,13 @@
   ],
   "rules" : {
       "indent": ["error", 4],
-      "no-underscore-dangle": ["error", { "allowAfterThis": true }]
+      "no-underscore-dangle": ["error", { "allowAfterThis": true }],
+      "comma-dangle": [
+        "error",
+        {
+            "objects": "ignore",
+            "arrays": "always-multiline"
+        }
+    ]
   }
 }
